# social-media-models

./: .gitignore  LICENSE  README.md  go.mod  go.sum  io_test.go  main.go  pyproject.toml  serialize_test.go
docs/: architecture.md  ide-setup.md  migration.md
dynamics/: deffuant.go  dynamics_test.go  galam.go  hk.go  voter.go
model/: agent.go  dynamics.go  model-dump.go  model.go  model_test.go  network-grid.go  post.go  random-activation.go  recsys.go  tweet.go
recsys/: mix.go  opinion-random.go  opinion.go  random.go  structure-random.go  structure.go  structure_notes.md  utils.go
simulation/: acc-mod-state-serializer.go  acc-mod-state.go  event-db.go  imodel.go  scenario-metadata.go  scenario.go  scenario_metadata_validation_test.go  simulation-serializer.go  simulation_test.go
smp_bindings/: __init__.py  cleanup.py  events_db.py  migrate.py  model_state.py  record.py  simulation.py
utils/: graph-serialize.go  graph-utils.go  graph_test.go  network.go  top-k.go
