[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smp-bindings"
version = "2.0.0"
description = "Python bindings for social-media-models simulation output (v2)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "msgpack>=1.0",
    "numpy>=1.24",
    "networkx>=3.0",
    "lz4>=4.0",
]

[project.scripts]
smp-migrate = "smp_bindings.migrate:main"

[tool.setuptools.packages.find]
include = ["smp_bindings*"]
